Fixed equation rendering on mobile

--- a/_sass/other.scss
+++ b/_sass/other.scss
@@ -19,3 +19,6 @@ table {
         margin: 0;
     }
 }
+
+.katex-display { overflow: auto hidden }
+
